# NEMO-StereoCompressor

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
source/: LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/assets/: dechecker.py  finalize.py
